# bench

./: .coveragerc  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pip.conf  pyproject.toml  requirements.txt
.github/workflows/: black.yml  lint.yml  mypy.yml  publish.yml  test-js.yml  unit-test.yml
arthur_bench/: version.py
arthur_bench/client/: __init__.py  bench_client.py  exceptions.py  utils.py
arthur_bench/exceptions/: __init__.py  exceptions.py
arthur_bench/logger/: __init__.py  logger.py
arthur_bench/models/: client.py  config.py  models.py  scoring.py
arthur_bench/run/: testrun.py  testsuite.py  utils.py
arthur_bench/scoring/: __init__.py  bertscore.py  code_eval.py  exact_match.py  hallucination.py  hedging_language.py  llm_guided.py  python_unit_testing.py  qa_quality.py  readability.py  reading_ease.py  scorer.py  scorer_profiler.py  scoring_method.py  specificity.py  summary_quality.py  utils.py  word_count.py  word_count_match.py
arthur_bench/server/: run_server.py  (+1 more)
docs/: requirements.txt
examples/: demo_bertscore.ipynb  demo_codegen.ipynb  demo_hallucination.ipynb  demo_hedging_language.ipynb  demo_python.ipynb  demo_question_answering.ipynb  demo_specificity.ipynb  demo_summary_validation.ipynb  elo.py  human_eval_solutions.csv  summarize_scoring_using_bedrock.ipynb
test/: conftest.py  helpers.py  requirements.txt  test_bertscore.py  test_hallucination.py  test_hedging_language.py  test_helpfulness.py  test_server.py  test_summary_quality.py  test_testrun.py  test_testsuite.py  test_utils.py
tests/: helpers.py  mock_suite.csv  requirements.txt  test_e2e.py  test_server.py  test_testrun.py  test_testsuite.py  test_utils.py
(+187 files in other folders)
