[build-system]
requires = ["setuptools>=64.0.0"]  # support for editable installs via pyproject was added in v64
build-backend = "setuptools.build_meta"

[project]
name = "arthur_bench"
description = "validate models for production"
authors = [
    {"name" = 'ArthurAI', "email" = "info@arthur.ai"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]  # fill this in if publishing to public pypi
dynamic = ["version"]

dependencies = [
    'evaluate~=0.4.0',
    'openai~=0.27',
    'pandas~=2.0.1',
    'langchain~=0.0.170',
    'sentencepiece==0.1.99',
    'bert_score~=0.3',
    'nltk~=3.8',
    'tqdm~=4.65',
    'pydantic>=1.10.0,<2.0',
    'pyjwt<3,>=2.6',
    'requests~=2.28',
    'requests_toolbelt~=1.0',
    'textstat~=0.7',
    'tiktoken~=0.4',
    'transformers==4.29.2',
    'wordfreq~=3.0'
]

[project.optional-dependencies]
server = [
    'fastapi~=0.99.1',
    'uvicorn~=0.22.0',
    'amplitude-analytics==1.1.1'
]
docs = [
    'sphinx',
    'furo',
    'myst_parser'
]

[project.scripts]
bench = "arthur_bench.server.run_server:run"

[project.urls]
Homepage = "https://www.arthur.ai/arthur-bench"
Documentation = "https://bench.readthedocs.io/"
Repository = "https://github.com/arthur-ai/bench"

[metadata]
url = 'http://arthur.ai'

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*", "examples*"]

[tool.setuptools.dynamic]
version = {attr = "arthur_bench.__version__"}
